AI Prompt Generator

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <img src="undraw_vibe-coding_mjme.svg" alt="Sample Image" class="side-image">
     </div>
     <div class="next-button">
-  <a href="index2.html">
+  <a href="main2.html">
     <button>Go to Prompt Generator →</button>
   </a>
 </div>
